--- a/index.html
+++ b/index.html
@@ -62,20 +62,27 @@
     <!-- About Section -->
     <section id="about" class="about-section">
         <div class="container">
-            <h2 class="section-title">About Me</h2>
             <div class="about-content">
-                <div class="about-text">
-                    <p>I ignite light in words and scatter them in quiet corners of the internet. Raised on cassettes and novels, I write like a love letter. My work sprinkles life with nuance — soft, untamed, a little messy.</p>
+                <div class="about-left">
+                    <h2 class="section-title">About Me</h2>
+                    <div class="about-text">
+                        <p>I ignite light in words and scatter them in quiet corners of the internet. Raised on cassettes and novels, I write like a love letter. My work sprinkles life with nuance — soft, untamed, a little messy.</p>
+                    </div>
+                    <div class="portfolio-links">
+                        <a href="https://www.notion.so/Naushin-Writes-23841b8e15d68093b73cea8d3b6509f5" class="portfolio-btn" target="_blank">
+                            <span class="btn-icon">📖</span>
+                            Writing Portfolio
+                        </a>
+                        <a href="https://www.notion.so/Naushin-UGC-Portfolio-23241b8e15d680a3bf28ffbbdbb3c1f3" class="portfolio-btn" target="_blank">
+                            <span class="btn-icon">🎥</span>
+                            UGC Portfolio
+                        </a>
+                    </div>
                 </div>
-                <div class="portfolio-links">
-                    <a href="https://www.notion.so/Naushin-Writes-23841b8e15d68093b73cea8d3b6509f5" class="portfolio-btn" target="_blank">
-                        <span class="btn-icon">📖</span>
-                        Writing Portfolio
-                    </a>
-                    <a href="https://www.notion.so/Naushin-UGC-Portfolio-23241b8e15d680a3bf28ffbbdbb3c1f3" class="portfolio-btn" target="_blank">
-                        <span class="btn-icon">🎥</span>
-                        UGC Portfolio
-                    </a>
+                <div class="about-right">
+                    <div class="about-image">
+                        <img src="assets/Naushin2.jpg" alt="Naushin" class="about-profile-image">
+                    </div>
                 </div>
             </div>
         </div>
@@ -84,31 +91,40 @@
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
         <div class="container">
-            <h2 class="section-title">Connect To Me</h2>
             <div class="contact-content">
-                <div class="contact-column">
-                    <a href="https://www.instagram.com/_.cinderelllla._/" class="contact-link" target="_blank">
-                        <span class="contact-icon"><i class="fab fa-instagram"></i></span>
-                        @_.cinderelllla._
-                    </a>
-                    <a href="https://www.tiktok.com/@naushin777?_t=ZN-8yAOQ27dX0Q&_r=1&fbclid=PAQ0xDSwLq0mVleHRuA2FlbQIxMAABp_Wj98eQy0YxuUq-4-Ie1NQ0tt63XMiuSu0Eg0pipXwnW3KeEKq45gT-NSpk_aem_u4h5nLAgDCYTggZs0c8JOw" class="contact-link" target="_blank">
-                        <span class="contact-icon"><i class="fab fa-tiktok"></i></span>
-                        @naushin777
-                    </a>
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=makaninaushin78@gmail.com&su=Inquiry&body=Hi%20Naushin,%0A%0AI%20hope%20you're%20doing%20well.%20I%20came%20across%20your%20portfolio%20and%20wanted%20to%20get%20in%20touch%20regarding" class="contact-link" target="_blank">
-                        <span class="contact-icon"><i class="fas fa-envelope"></i></span>
-                        makaninaushin78@gmail.com
-                    </a>
+                <div class="contact-left">
+                    <div class="contact-image">
+                        <img src="assets/Naushin3.jpg" alt="Naushin" class="contact-profile-image">
+                    </div>
                 </div>
-                <div class="contact-column">
-                    <a href="https://youtube.com/@modernmysticfairy?feature=shared" class="contact-link" target="_blank">
-                        <span class="contact-icon"><i class="fab fa-youtube"></i></span>
-                        @ModernMysticFairy
-                    </a>
-                    <a href="https://www.linkedin.com/in/naushin1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="contact-link" target="_blank">
-                        <span class="contact-icon"><i class="fab fa-linkedin"></i></span>
-                        Naushin Makani
-                    </a>
+                <div class="contact-right">
+                    <h2 class="section-title">Connect To Me</h2>
+                    <div class="contact-columns">
+                        <div class="contact-column">
+                            <a href="https://www.instagram.com/_.cinderelllla._/" class="contact-link" target="_blank">
+                                <span class="contact-icon"><i class="fab fa-instagram"></i></span>
+                                @_.cinderelllla._
+                            </a>
+                            <a href="https://www.tiktok.com/@naushin777?_t=ZN-8yAOQ27dX0Q&_r=1&fbclid=PAQ0xDSwLq0mVleHRuA2FlbQIxMAABp_Wj98eQy0YxuUq-4-Ie1NQ0tt63XMiuSu0Eg0pipXwnW3KeEKq45gT-NSpk_aem_u4h5nLAgDCYTggZs0c8JOw" class="contact-link" target="_blank">
+                                <span class="contact-icon"><i class="fab fa-tiktok"></i></span>
+                                @naushin777
+                            </a>
+                            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=makaninaushin78@gmail.com&su=Inquiry&body=Hi%20Naushin,%0A%0AI%20hope%20you're%20doing%20well.%20I%20came%20across%20your%20portfolio%20and%20wanted%20to%20get%20in%20touch%20regarding" class="contact-link" target="_blank">
+                                <span class="contact-icon"><i class="fas fa-envelope"></i></span>
+                                makaninaushin78@gmail.com
+                            </a>
+                        </div>
+                        <div class="contact-column">
+                            <a href="https://youtube.com/@modernmysticfairy?feature=shared" class="contact-link" target="_blank">
+                                <span class="contact-icon"><i class="fab fa-youtube"></i></span>
+                                @ModernMysticFairy
+                            </a>
+                            <a href="https://www.linkedin.com/in/naushin1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="contact-link" target="_blank">
+                                <span class="contact-icon"><i class="fab fa-linkedin"></i></span>
+                                Naushin Makani
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -161,6 +177,7 @@
             
             <div class="footer-bottom">
                 <p class="footer-text">Designed with stardust by Naushin ✨</p>
+                <p class="footer-credit">Built by <a href="https://thefreewebsitewizards.com/?fbclid=PAZXh0bgNhZW0CMTEAAafn8nGrYl5aEcv6IXhOwf7nu69qjA5r_G54GQJ56q66kghnbJfLzGqf9lt5qA_aem_t_Br3NrdreVevFoMTHKsqA" class="wizard-link" target="_blank">The Free Website Wizard</a></p>
             </div>
         </div>
     </footer>
