--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="about-left">
                     <h2 class="section-title">About Me</h2>
                     <div class="about-text">
-                        <p>I ignite light in words and scatter them in quiet corners of the internet. Raised on cassettes and novels, I write like a love letter. My work sprinkles life with nuance — soft, untamed, a little messy.</p>
+                        <p>I ignite light in words and scatter them in quiet corners of the internet. Raised on cassettes and novels, I write like a love letter. My work sprinkles life with nuance; soft, untamed, a little messy.</p>
                     </div>
                     <div class="portfolio-links">
                         <a href="https://www.notion.so/Naushin-Writes-23841b8e15d68093b73cea8d3b6509f5" class="portfolio-btn" target="_blank">
